# asc-devkit

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_en.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_en.md  OAT.xml  README.md  README_en.md  SECURITY.md  SECURITY_en.md  Third_Party_Open_Source_Software_List.yaml  build.sh  classify_rule.yaml  markdown-link-check.toml  version.cmake
cmake/device/: CMakeLists.txt
experiment/experiment_simt_shwstone/fixed_shape_scatter_shwstone/: CMakeLists.txt  scatter.asc
experiment/gelu_regbase_cxj/: CMakeLists.txt  README.md
experiment/mx_mmad_experiment/adv_api_experiment_test1/: CMakeLists.txt  data_utils.h
impl/: CMakeLists.txt
impl/adv_api/: CMakeLists.txt  gen_kernel_tiling.cmake
impl/adv_api/cmake/: kernel_headers.cmake
impl/adv_api/tiling/: CMakeLists.txt
impl/aicpu_api/: CMakeLists.txt  aicpu_dump.cpp
impl/basic_api/: CMakeLists.txt  common_types.h  kernel_check.h  kernel_check_util.h  kernel_event.h  kernel_log.h  kernel_macros.h  kernel_npu_debug.h  kernel_operator_atomic_intf_impl.h  kernel_operator_block_sync_intf_impl.h  kernel_operator_cache_intf_impl.h  kernel_operator_common_intf_impl.h  kernel_operator_conv2d_base_impl.h  kernel_operator_conv2d_intf_impl.h  kernel_operator_coord.h  kernel_operator_data_copy_base_impl.h  kernel_operator_data_copy_check.h  kernel_operator_data_copy_intf_impl.h  kernel_operator_determine_compute_sync_intf_impl.h  kernel_operator_dump_tensor_intf_impl.h  kernel_operator_fixpipe_intf_impl.h  kernel_operator_gemm_base_impl.h  kernel_operator_gemm_intf_impl.h  kernel_operator_intf_impl.h  kernel_operator_layout.h  kernel_operator_list_tensor_intf_impl.h  kernel_operator_mm_base_impl.h  kernel_operator_mm_bitmode_intf_impl.h  kernel_operator_mm_bitmode_struct.h  kernel_operator_mm_check.h  kernel_operator_mm_intf_impl.h  kernel_operator_mm_load2d_impl.h  kernel_operator_proposal_base_impl.h  kernel_operator_proposal_intf_impl.h  kernel_operator_scalar_intf_impl.h  kernel_operator_set_atomic_intf_impl.h  kernel_operator_symbol_override_impl.h  kernel_operator_sys_var_intf_impl.h  kernel_operator_tensor_trait.h  kernel_operator_vec_bilinearinterpolation_intf_impl.h  (+35 more)
impl/basic_api/dav_3510/: kernel_operator_atomic_impl.h  kernel_operator_cache_impl.h  kernel_operator_common_impl.h  kernel_operator_data_copy_impl.h  kernel_operator_determine_compute_sync_impl.h  kernel_operator_dump_tensor_impl.h  kernel_operator_fixpipe_impl.h  kernel_operator_list_tensor_impl.h  kernel_operator_mm_bitmode_impl.h  kernel_operator_mm_impl.h  kernel_operator_print_impl.h  kernel_operator_proposal_impl.h  kernel_operator_reg_others_impl.h  kernel_operator_scm_data_copy_impl.h  kernel_operator_set_atomic_impl.h  kernel_operator_sync_impl.h  kernel_operator_sys_var_impl.h  kernel_operator_vec_bilinearinterpolation_impl.h  kernel_operator_vec_binary_continuous_impl.h  kernel_operator_vec_binary_impl.h  kernel_operator_vec_binary_scalar_impl.h  kernel_operator_vec_brcb_impl.h  kernel_operator_vec_cmp_impl.h  kernel_operator_vec_compare_continuous_impl.h  kernel_operator_vec_createvecindex_impl.h  kernel_operator_vec_duplicate_impl.h  kernel_operator_vec_gather_impl.h  kernel_operator_vec_gather_mask_impl.h  kernel_operator_vec_mulcast_impl.h  kernel_operator_vec_reduce_impl.h  kernel_operator_vec_scatter_impl.h  kernel_operator_vec_sel_impl.h  kernel_operator_vec_template_impl.h  kernel_operator_vec_ternary_scalar_impl.h  kernel_operator_vec_transpose_impl.h  kernel_operator_vec_unary_impl.h  kernel_operator_vec_vconv_impl.h  kernel_operator_vec_vpadding_impl.h  kernel_tpipe_impl_c310.h  kernel_tpipe_impl_c310_vec.h
impl/basic_api/dav_c100/: kernel_operator_cache_impl.h  kernel_operator_common_impl.h  kernel_operator_data_copy_impl.h  kernel_operator_determine_compute_sync_impl.h  kernel_operator_dump_tensor_impl.h  kernel_operator_fixpipe_impl.h  kernel_operator_list_tensor_impl.h  kernel_operator_mm_impl.h  kernel_operator_proposal_impl.h  kernel_operator_set_atomic_impl.h  kernel_operator_sync_impl.h  kernel_operator_sys_var_impl.h  kernel_operator_vec_bilinearinterpolation_impl.h  kernel_operator_vec_binary_impl.h  kernel_operator_vec_binary_scalar_impl.h  kernel_operator_vec_brcb_impl.h  kernel_operator_vec_cmpsel_impl.h  kernel_operator_vec_createvecindex_impl.h  kernel_operator_vec_duplicate_impl.h  kernel_operator_vec_gather_impl.h  kernel_operator_vec_gather_mask_impl.h  kernel_operator_vec_mulcast_impl.h  kernel_operator_vec_reduce_impl.h  kernel_operator_vec_scatter_impl.h  kernel_operator_vec_ternary_scalar_impl.h  kernel_operator_vec_transpose_impl.h  kernel_operator_vec_unary_impl.h  kernel_operator_vec_vconv_impl.h  kernel_operator_vec_vpadding_impl.h
impl/basic_api/dav_c220/: kernel_operator_cache_impl.h  kernel_operator_common_impl.h  kernel_operator_cube_others_impl.h  kernel_operator_data_copy_impl.h  kernel_operator_determine_compute_sync_impl.h  kernel_operator_dump_tensor_impl.h  kernel_operator_fixpipe_impl.h  kernel_operator_fixpipe_v2_impl.h  kernel_operator_list_tensor_impl.h  kernel_operator_mm_impl.h  kernel_operator_proposal_impl.h  kernel_operator_reg_others_impl.h  kernel_operator_scm_data_copy_impl.h  kernel_operator_set_atomic_impl.h  kernel_operator_set_spr_impl.h  kernel_operator_sync_impl.h  kernel_operator_sys_var_impl.h  kernel_operator_vec_bilinearinterpolation_impl.h  kernel_operator_vec_binary_impl.h  kernel_operator_vec_binary_scalar_impl.h  kernel_operator_vec_brcb_impl.h  kernel_operator_vec_cmp_impl.h  kernel_operator_vec_cmpsel_impl.h  (+13 more)
impl/simt_api/: asc_bf16_impl.h  asc_fp16_impl.h  asc_fp8_impl.h  cooperative_groups_impl.h  device_atomic_functions_impl.h  device_functions_impl.h  device_sync_functions_impl.h  device_warp_functions_impl.h  internal_functions_impl.h  math_functions_impl.h  vector_functions_impl.h
impl/tensor_api/: CMakeLists.txt
impl/utils/: common_types.h  sys_constants.h  sys_macros.h
tests/api/: CMakeLists.txt
tools/aclrtc/: CMakeLists.txt  acl_rt_compile.cpp
(+15430 files in other folders)
